--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Site is down for maintenance</title>
+        <title>www.dhamodharan.com</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <style type="text/css">
@@ -20,7 +20,7 @@
             <h1>Site is temporarily unavailable.</h1>
             <p>Scheduled maintenance is currently in progress. Please check back soon.</p>
             <p>We apologize for any inconvenience.</p>
-            <p id="signature">&mdash; <a href="mailto:infodhamodharanj@gmail.com">[Dhamodharan Jaganathan]</a></p>
+            <p id="signature">&mdash; <a href="mailto:infodhamodharanj@gmail.com">[DJ]</a></p>
         </article>
     </body>
 </html>
