--- a/vipin/index.html
+++ b/vipin/index.html
@@ -257,7 +257,7 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/01-large.jpg" data-lightbox="roadtrip" title="NewsInfinite"><img class="grayscale" src="img/portfolio/EVA.png" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/01-large.jpg" data-lightbox="roadtrip" title="NewsInfinite"><img class="grayscale" src="img/portfolio/projects/pinakin.png"" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -267,7 +267,7 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/02-large.jpg" data-lightbox="roadtrip" title="WallPic"><img class="grayscale" src="img/portfolio/fm-radio.png" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/02-large.jpg" data-lightbox="roadtrip" title="WallPic"><img class="grayscale" src="img/portfolio/projects/nhance-lms.png" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -277,7 +277,7 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/03-large.jpg" data-lightbox="roadtrip" title="Npad"><img class="grayscale" src="img/portfolio/nhance.png" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/03-large.jpg" data-lightbox="roadtrip" title="Npad"><img class="grayscale" src="img/portfolio/projects/mycotra.png" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -287,7 +287,7 @@
           <div class="col-md-3 col-sm-6 ">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/04-large.jpg" data-lightbox="roadtrip" title="JUST ET IT!"><img class="grayscale" src="img/portfolio/torch-light.png" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/04-large.jpg" data-lightbox="roadtrip" title="JUST ET IT!"><img class="grayscale" src="img\portfolio\projects\eva-lib.png" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -297,7 +297,7 @@
           <div class="col-md-3 col-sm-6 ">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/05-large.jpg" data-lightbox="roadtrip" title="YoScholar Cloud POS"><img class="grayscale" src="img/portfolio/05-small.png" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/05-large.jpg" data-lightbox="roadtrip" title="YoScholar Cloud POS"><img class="grayscale" src="img/portfolio/projects/fm-radio.png" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -307,7 +307,7 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/06-large.jpg" data-lightbox="roadtrip" title="YoScholar Delivery"><img class="grayscale" src="img/portfolio/06-small.png" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/06-large.jpg" data-lightbox="roadtrip" title="YoScholar Delivery"><img class="grayscale" src="img/portfolio/projects/t-light.png" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -317,7 +317,7 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/07-large.jpg" data-lightbox="roadtrip" title="Minimo"><img class="grayscale" src="img/portfolio/07-small.png" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/07-large.jpg" data-lightbox="roadtrip" title="Minimo"><img class="grayscale" src="img/portfolio/projects/remind-me.png" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
@@ -327,7 +327,7 @@
           <div class="col-md-3 col-sm-6">
               <div class="overlay-effect effects clearfix">
                   <div class="img">
-                      <a href="img/portfolio/08-large.jpg" data-lightbox="roadtrip" title="Sunny"><img class="grayscale" src="img/portfolio/08-small.png" alt="Portfolio Item"></a>
+                      <a href="img/portfolio/08-large.jpg" data-lightbox="roadtrip" title="Sunny"><img class="grayscale" src="img/portfolio/projects/nhance-verify.png" alt="Portfolio Item"></a>
                   </div>
               </div>
           </div>
