--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<a href="index.html#about"><i class="fa fa-fw fa-quote-left"></i><span>About</span></a>
 						<a href="index.html#service"><i class="fa fa-fw fa-globe"></i><span>Service</span></a>
 						<a href="index.html#portfolio"><i class="fa fa-fw fa-picture-o"></i><span>Portfolio</span></a>
-						<!-- <a href="index.html#blog"><i class="fa fa-fw fa-rss"></i><span>Blog</span></a> -->
+						<a href="http://www.dhamodharan.com/blog" target="_blank"><i class="fa fa-fw fa-rss"></i><span>Blog</span></a>
 						<a href="index.html#contact"><i class="fa fa-fw fa-envelope-o"></i><span>Contact</span></a>
 					</div>
 				</nav>
@@ -433,7 +433,7 @@
 			  </div> --> 
 			</div>
 			<br>
-			<!-- Social Buttons - use font-awesome, past in what you want -->
+          <div class="container">           
             <div class="row">
               <div class="col-md-12">
                 <ul class="social-buttons">
@@ -446,6 +446,8 @@
                 </ul>
               </div>
             </div>
+          </div>
+      <!-- Social Buttons - use font-awesome, past in what you want -->
           </div>
         </section>
 		<!-- ==========================
