--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <a href="index.html#about"><i class="fa fa-fw fa-quote-left"></i><span>About</span></a>
             <a href="index.html#service"><i class="fa fa-fw fa-globe"></i><span>Service</span></a>
             <a href="index.html#portfolio"><i class="fa fa-fw fa-picture-o"></i><span>Portfolio</span></a>
-            <a href="http://www.dhamodharan.com/blog" target="_blank"><i class="fa fa-fw fa-rss"></i><span>Blog</span></a>
+            <!--<a href="http://www.dhamodharan.com/blog" target="_blank"><i class="fa fa-fw fa-rss"></i><span>Blog</span></a>-->
             <a href="index.html#contact"><i class="fa fa-fw fa-envelope-o"></i><span>Contact</span></a>
           </div>
         </nav>
@@ -124,7 +124,7 @@
               <div class="col-md-8 col-md-offset-2 wp1">
                 <h1 class="arrow">A little <span>about</span> me</h1><!-- Headline -->
         <!-- about / welcome text -->
-                <p>I am an Android Developer who works with Startups to bring their ideas to life. I believe that in an increasingly globalized world, mobile apps have changed the way we conduct business, socialize and entertain. This worldwide connectivity has enabled developers like me to be key actors in the way the economy is being shaped, by giving us the tools to create innovative ideas and distribute them to the app market. I have been working with StartUps like <a target="_blank" href="http://www.gasofttech.com/">GA Software Technologies Private Limited</a>, <a target="_blank" href="http://aseuro.co.in/">Aseuro Technologies Private Limited</a> and <a target="_blank" href="https://dev.mycotra.com/login">Mycotra Technologies Private Limited</a> for past 4.2 years. I have a bachelor's degree in Electronics and Communication Engineering from <a target="_blank" href="https://www.annauniv.edu/">Anna University.</a></p>
+                <p>I am an Android Developer who works with Startups to bring their ideas to life. I believe that in an increasingly globalized world, mobile apps have changed the way we conduct business, socialize and entertain. This worldwide connectivity has enabled developers like me to be key actors in the way the economy is being shaped, by giving us the tools to create innovative ideas and distribute them to the app market. I have been working with StartUps like <a target="_blank" href="http://www.gasofttech.com/">GA Software Technologies Private Limited</a>, <a target="_blank" href="http://aseuro.co.in/">Aseuro Technologies Private Limited</a>,<a target="_blank" href="https://dev.mycotra.com/login">Mycotra Technologies Private Limited</a> and Currently working with <a target="_blank" href="https://www.boeing.co.in/">Boeing India Private Limited</a> having 5.5 years of experience. I have a bachelor's degree in Electronics and Communication Engineering from <a target="_blank" href="https://www.annauniv.edu/">Anna University.</a></p>
               </div>
             </div>
           </div>
@@ -394,7 +394,7 @@
               <div class="col-md-4">
                 <div class="dark-box box-hover">
                   <h2><i class="fa fa-map-marker"></i><span>Address</span></h2>
-                  <p>VP Rd<br>1st Stage, BTM Layout<br>Bengaluru, Karnataka 560068, India</p>
+                  <p>Whitefield<br><br>Bengaluru, Karnataka 560068, India</p>
                 </div>
               </div>
         <!-- Phone Number Box -->
@@ -477,7 +477,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12 text-center">
-                <p>All Rights Reserved. &copy; 2018 Dhamodharan</p>
+                <p>All Rights Reserved. &copy; 2020 Dhamodharan</p>
               </div>
             </div>
           </div>
